--- a/1. Clone Student Repos.ipynb
+++ b/1. Clone Student Repos.ipynb
@@ -13,7 +13,9 @@
     "from git import Repo\n",
     "import os\n",
     "import pandas as pd\n",
-    "import time"
+    "import time\n",
+    "import shutil\n",
+    "import stat"
    ]
   },
   {
@@ -21,7 +23,7 @@
    "id": "0ebaea94-09ac-44aa-ab88-d7b0a2277e22",
    "metadata": {},
    "source": [
-    "## Accessing the student solutions"
+    "## Downloading the student solutions"
    ]
   },
   {
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a4c61faa-4681-440d-b8a4-d57e1b73f3a7",
    "metadata": {
     "tags": []
@@ -134,6 +136,86 @@
    ],
    "source": [
     "cloned_repos.equals(URL_repos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11f7c032-6b5b-43fb-8252-4506ef4ce833",
+   "metadata": {},
+   "source": [
+    "## Downloading the students' hidden tests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e32c5d03-c2dd-4914-9f01-b6944bb86b79",
+   "metadata": {},
+   "source": [
+    "Cloning the test repos:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2bffd223-87c1-42e5-b411-830296d43b09",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "m0_students = milestone_lists[0][\"Student\"]\n",
+    "m0_tests =  milestone_lists[0][\"Test Repo\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8c1204ed-811a-4569-8447-a1e35bd92147",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "for student_name, test_repo in zip(m0_students, m0_tests):\n",
+    "    repo_url = test_repo + \".git\"\n",
+    "    Repo.clone_from(repo_url, f\"raw_solutions/student_tests/test_{student_name.strip()}\")\n",
+    "    time.sleep(0.06)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "062f87d5-021e-428e-b42d-4d530ad14d79",
+   "metadata": {},
+   "source": [
+    "Moving the hidden test files into the student solutions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "73cdcd27-5d6c-4579-acfd-85f575646801",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"student_repos_list/student_anonymised_dict.json\", 'r') as json_file:\n",
+    "    id_to_student = json.load(json_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3d090dbd-d948-44b8-81ce-3f3c76b22214",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "for student_id, student_name in id_to_student.items():\n",
+    "    test_path = f\"raw_solutions/student_tests/test_{student_name}/src/test/java/thkoeln/st/st2praktikum/exercise/Exercise0HiddenTests.java\"\n",
+    "    solution_path = f\"raw_solutions/student_solutions/m0_{student_id}/src/test/java/thkoeln/st/st2praktikum/exercise\"\n",
+    "    shutil.copy(test_path, solution_path)"
    ]
   }
  ],
