--- a/4. Process Milestone 0 Solutions.ipynb
+++ b/4. Process Milestone 0 Solutions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "f891bb2a-3bd5-494d-8560-3a551a00c556",
    "metadata": {
     "tags": []
@@ -41,23 +41,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6591a01e-d8d6-4a06-98be-abf69cd2d1a7",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "sources = [\"gpt3.5\", \"bing\", \"bard\", \"student\"]\n",
+    "# add to this cell each AI that has been tested\n",
+    "sources = [\"gpt3.5\", \"bing\", \"bard\", \"gpt4\", \"student\"]\n",
     "attributes = {\"student\": [\"source\", \"name\", \"code\"],\n",
     "              \"gpt3.5\": [\"source\", \"name\", \"style\", \"code\"],\n",
     "              \"bing\": [\"source\", \"name\", \"style\", \"version\", \"code\"],\n",
-    "              \"bard\": [\"source\", \"name\", \"style\", \"code\"]}"
+    "              \"bard\": [\"source\", \"name\", \"style\", \"code\"],\n",
+    "              \"gpt4\": [\"source\", \"name\", \"style\", \"code\"]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "b1cb4bd0-fa9f-42ab-b80b-ce2ce4a99616",
    "metadata": {
     "tags": []
@@ -110,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "aef31f80-f3e7-4788-99b8-714e819c4aa5",
    "metadata": {
     "tags": []
@@ -124,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "158a826a-bff0-4ba3-b06f-0fc389451f2b",
    "metadata": {
     "tags": []
@@ -144,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "5558c508-67fb-49dd-bb55-72263ba1c3cd",
    "metadata": {
     "tags": []
@@ -167,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "b55f9795-9855-4fc0-9079-e74f55e0400f",
    "metadata": {
     "tags": []
@@ -193,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "75f7ab8e-12f6-4ad2-a568-5194145def1f",
    "metadata": {
     "tags": []
@@ -222,19 +224,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "9daf6b61-e5f6-4f54-9477-728eba62f4c5",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "df_data = pd.DataFrame(concatenated_data)[[\"source\", \"style\", \"version\", \"code\"]]"
+    "df_data = pd.DataFrame(concatenated_data)[[\"name\", \"source\", \"style\", \"version\", \"code\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "7e83093a-ea92-454c-a6c9-dbf2986ec837",
    "metadata": {
     "tags": []
@@ -261,6 +263,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>name</th>\n",
        "      <th>source</th>\n",
        "      <th>style</th>\n",
        "      <th>version</th>\n",
@@ -270,6 +273,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>gpt3.5</td>\n",
        "      <td>plain</td>\n",
        "      <td>NaN</td>\n",
@@ -277,6 +281,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>10</td>\n",
        "      <td>gpt3.5</td>\n",
        "      <td>plain</td>\n",
        "      <td>NaN</td>\n",
@@ -284,6 +289,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>11</td>\n",
        "      <td>gpt3.5</td>\n",
        "      <td>cc</td>\n",
        "      <td>NaN</td>\n",
@@ -291,6 +297,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>12</td>\n",
        "      <td>gpt3.5</td>\n",
        "      <td>cc</td>\n",
        "      <td>NaN</td>\n",
@@ -298,6 +305,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>13</td>\n",
        "      <td>gpt3.5</td>\n",
        "      <td>cc</td>\n",
        "      <td>NaN</td>\n",
@@ -308,15 +316,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   source  style version                                               code\n",
-       "0  gpt3.5  plain     NaN  package thkoeln.st.st2praktikum.exercise;\\n\\np...\n",
-       "1  gpt3.5  plain     NaN  package thkoeln.st.st2praktikum.exercise;\\n\\np...\n",
-       "2  gpt3.5     cc     NaN  package thkoeln.st.st2praktikum.exercise;\\n\\ni...\n",
-       "3  gpt3.5     cc     NaN  package thkoeln.st.st2praktikum.exercise;\\n\\np...\n",
-       "4  gpt3.5     cc     NaN  package thkoeln.st.st2praktikum.exercise;\\n\\ni..."
+       "  name  source  style version  \\\n",
+       "0    1  gpt3.5  plain     NaN   \n",
+       "1   10  gpt3.5  plain     NaN   \n",
+       "2   11  gpt3.5     cc     NaN   \n",
+       "3   12  gpt3.5     cc     NaN   \n",
+       "4   13  gpt3.5     cc     NaN   \n",
+       "\n",
+       "                                                code  \n",
+       "0  package thkoeln.st.st2praktikum.exercise;\\n\\np...  \n",
+       "1  package thkoeln.st.st2praktikum.exercise;\\n\\np...  \n",
+       "2  package thkoeln.st.st2praktikum.exercise;\\n\\ni...  \n",
+       "3  package thkoeln.st.st2praktikum.exercise;\\n\\np...  \n",
+       "4  package thkoeln.st.st2praktikum.exercise;\\n\\ni...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "973785fb-ba8a-42c0-b484-7abf456f1957",
    "metadata": {
     "tags": []
@@ -365,8 +380,12 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"4\" valign=\"top\">source</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">source</th>\n",
        "      <th>bard</th>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gpt4</th>\n",
        "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -392,7 +411,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>plain</th>\n",
-       "      <td>30</td>\n",
+       "      <td>47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">version</th>\n",
@@ -415,18 +434,19 @@
        "                  counts\n",
        "column  value           \n",
        "source  bard          17\n",
+       "        gpt4          17\n",
        "        gpt3.5        19\n",
        "        bing          28\n",
        "        student      104\n",
        "style   cc            15\n",
        "        styled        19\n",
-       "        plain         30\n",
+       "        plain         47\n",
        "version balanced       7\n",
        "        concise        9\n",
        "        creative      12"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,100 +466,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "5889da18-dbc5-45d9-8b9d-6d85d7f9ff83",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "binary_data = df_data.replace({\"source\":{\"gpt3.5\":\"ai\", \"bing\":\"ai\", \"bard\":\"ai\"}})[[\"source\", \"code\"]]"
+    "binary_data = df_data.replace({\"source\":{\"gpt3.5\":\"ai\", \"bing\":\"ai\", \"bard\":\"ai\", \"gpt4\":\"ai\"}})[[\"source\", \"code\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "95a08875-82fd-4955-844a-18cc39b51cc0",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>source</th>\n",
-       "      <th>code</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ai</td>\n",
-       "      <td>package thkoeln.st.st2praktikum.exercise;\\n\\np...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ai</td>\n",
-       "      <td>package thkoeln.st.st2praktikum.exercise;\\n\\np...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ai</td>\n",
-       "      <td>package thkoeln.st.st2praktikum.exercise;\\n\\ni...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ai</td>\n",
-       "      <td>package thkoeln.st.st2praktikum.exercise;\\n\\np...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ai</td>\n",
-       "      <td>package thkoeln.st.st2praktikum.exercise;\\n\\ni...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  source                                               code\n",
-       "0     ai  package thkoeln.st.st2praktikum.exercise;\\n\\np...\n",
-       "1     ai  package thkoeln.st.st2praktikum.exercise;\\n\\np...\n",
-       "2     ai  package thkoeln.st.st2praktikum.exercise;\\n\\ni...\n",
-       "3     ai  package thkoeln.st.st2praktikum.exercise;\\n\\np...\n",
-       "4     ai  package thkoeln.st.st2praktikum.exercise;\\n\\ni..."
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "binary_data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "618acf6d-e0f3-43db-ba83-8518808075f3",
    "metadata": {},
    "outputs": [
@@ -547,11 +486,11 @@
      "data": {
       "text/plain": [
        "student    104\n",
-       "ai          64\n",
+       "ai          81\n",
        "Name: source, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "f9caa038-e89f-4448-948b-bbe163bc1d16",
    "metadata": {
     "tags": []
@@ -582,11 +521,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "bac97716-a167-4cd6-bb5b-7de366effb3a",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 21,
+   "id": "7f4d7a4b-7aa7-440e-a9d0-18386a1b86f5",
+   "metadata": {},
    "outputs": [],
    "source": [
     "binary_data.to_csv(\"processed_solutions/m0_data_binary.csv\", index=False)"
